export class Compromiso {
  constructor({ cantidadHoras, periodo }) {
    this.cantidadHoras = cantidadHoras;
    this.periodo = periodo;
  }
}
