export class MedioDeContacto {
    constructor({ tipo, valor }) {
        this.tipo = tipo;
        this.valor = valor;
    }
}