@startuml

' ───────────────────────── Colectivo y Ubicación ─────────────────────────

class Colectivo {
  -nombre: string
  -descripcion: string
  -tipoColectivo: TIPO_COLECTIVO
  -ubicacion: Ubicacion
  -proyectos: Array<Proyecto>

  +agregarProyecto(proyecto: Proyecto): null
}

enum TIPO_COLECTIVO {
  FUNDACION
  ASOCIACION_BARRIAL
  ONG
  ASAMBLEA
}

class Ubicacion {
  -tipoUbicacion: TIPO_UBICACION
  -nombre: string

  +esDeAlcanceNacional(): boolean
}

enum TIPO_UBICACION {
  ARGENTINA
  PROVINCIA
  CABA
  LOCALIDAD
}

Colectivo --> TIPO_COLECTIVO
Colectivo --> "*" Proyecto
Colectivo --> "0..1" Ubicacion
Ubicacion --> TIPO_UBICACION

' ───────────────────────── Proyecto y Compromiso ─────────────────────────

class Proyecto {
  -titulo: string
  -descripcion: string
  -colaboraciones: Array<Colaboracion>
  -perfiles: Array<Perfil>
  -estado: PROYECTO_ESTADO
  -porcentajeConcrecion: number
  -logros: Array<Logro>
  -urlSistema: string
  -urlRepositorio: string

  +estaAbierto(): boolean
  +finalizarProyecto(): void
  +cumpleAlgunaHabilidadRequerida(colaborador: Colaborador): boolean
  +agregarLogro(logro: Logro): void
  +quitarLogro(logro: Logro): void
  +agregarPerfil(perfil: Perfil): void
  +quitarPerfil(perfil: Perfil): void
  +yaColaboraron(colaborador: Colaborador): boolean
  +agregarColaboracion(colaboracion: Colaboracion): void
  +quitarColaboracion(colaboracion: Colaboracion): void
}

enum PROYECTO_ESTADO {
  ABIERTO
  FINALIZADO
}

enum MODALIDAD_COLABORACION {
  GRATUITA
  OFRECE_INCENTIVO_ECONOMICO
  EXISTE_POSIBILIDAD_DE_CONTRATACION
}

class Logro {
  -titulo: string
  -descripcion: string
  -fecha: Date

}

class Compromiso {
  -cantidadHoras: number
  -periodo: PERIODO_COMPROMISO
}

enum PERIODO_COMPROMISO {
  HS_TOTALES
  HS_SEMANALES
  HS_MENSUALES
}

Proyecto --> PROYECTO_ESTADO
Perfil --> Compromiso
Perfil--> MODALIDAD_COLABORACION
Proyecto -->"*" Perfil
Proyecto --> "0..*" Logro
Compromiso --> PERIODO_COMPROMISO

' ───────────────────────── Habilidad y Colaboración ─────────────────────────

class Perfil {
  -descripcion: string
  -habilidadesRequeridas: Array<Habilidad>
  -habilidadesOpcionales: Array<Habilidad>
  -compromiso: Compromiso
  -modalidadColaboracion: MODALIDAD_COLABORACION

  +agregarHabilidadRequerida(habilidad: Habilidad): void
  +quitarHabilidadRequerida(habilidad: Habilidad): void
  +agregarHabilidadOpcional(habilidad: Habilidad): void
  +quitarHabilidadOpcional(habilidad: Habilidad): void
  +cumpleAlgunaHabilidadRequerida(colaborador: Colaborador): boolean
  +cumpleAlgunaHabilidadOpcional(colaborador: Colaborador): boolean
}

class Habilidad {
  -titulo: string
  -codigo: string
  -descripcion: string
  -fechaCreacion: Date
  -usuario: string
  -activo: boolean
}

class Colaboracion {
  -fecha: Date
  -colaborador: Colaborador
  -esPublica: boolean
}

class Colaborador {
  -nombreFantasia: string
  -nombre: string
  -apellido: string
  -cuentaGit: string
  -habilidades: Array<Habilidad>
  -pronombres: Set<string>
  -presentacion: string
  -recibeMensajeriaInterna: boolean
  -mediosDeContacto: Array<MedioDeContacto>

  +agregarPronombre(pronombre: string): void
  +quitarPronombre(pronombre: string): void
  +tieneHabilidad(habilidad: Habilidad): boolean
  +agregarHabilidad(habilidad: Habilidad): void
  +quitarHabilidad(habilidad: Habilidad): void
}

Perfil --> "*" Habilidad
Proyecto --> "*" Colaboracion
Colaboracion --> Colaborador
Colaborador --> "*" Habilidad
Colaborador --> "0..*" MedioDeContacto

class MedioDeContacto {
    -tipo: TIPOS_MEDIOS_CONTACTO
    -valor: string
}

enum TIPOS_MEDIOS_CONTACTO {
    SMS
    EMAIL
    WHATSAPP
}

MedioDeContacto --> TIPOS_MEDIOS_CONTACTO

class NotificacionInterna {
  -destinatario: Usuario
  -contenido: string
  -fecha: Date
  -esLeida: boolean
}

class Usuario {

}

NotificacionInterna --> Usuario

@enduml
